# context-helpers

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  config.example.yaml  pyproject.toml
plists/: com.context-helpers.plist.j2
src/context_helpers/: __init__.py  auth.py  cli.py  config.py  launchd.py  push.py  server.py  state.py
src/context_helpers/collectors/: base.py  registry.py
src/context_helpers/collectors/browser_history/: collector.py  router.py
src/context_helpers/collectors/calendar/: collector.py  router.py
src/context_helpers/collectors/contacts/: collector.py  router.py
src/context_helpers/collectors/filesystem/: collector.py  failures.py  router.py
src/context_helpers/collectors/health/: collector.py  router.py
src/context_helpers/collectors/imessage/: collector.py  router.py
src/context_helpers/collectors/location/: collector.py  router.py
src/context_helpers/collectors/music/: collector.py  router.py
src/context_helpers/collectors/notes/: collector.py  router.py
src/context_helpers/collectors/obsidian/: collector.py  router.py
src/context_helpers/collectors/oura/: collector.py  router.py
src/context_helpers/collectors/podcasts/: collector.py  router.py
tests/: conftest.py  test_auth.py  test_config.py  test_integration.py  test_reset_state.py  test_server.py
tests/collectors/: conftest.py  test_browser_history.py  test_calendar.py  test_contacts.py  test_filesystem.py  test_health.py  test_imessage.py  test_location.py  test_music.py  test_notes.py  test_oura.py  test_paged_collector.py  test_podcasts.py  test_registry.py  test_reminders.py  test_screentime.py
(+6 files in other folders)
